Add login to registration handler
