# docs/swagger.yaml
@@ -76,11 +76,20 @@ definitions:
           $ref: '#/definitions/handler.StageRequestToStageDetailResponse'
         type: array
     type: object
+  handler.StageRequestInfoResponse:
+    properties:
+      item_count:
+        type: integer
+      request_id:
+        type: integer
+    type: object
   handler.StageRequestToStageDetailResponse:
     properties:
       first_dimension_const:
         type: number
       first_dimension_name:
+        type: string
+      image_url:
         type: string
       input_field_1:
         type: integer
@@ -90,6 +99,8 @@ definitions:
         type: number
       second_dimension_name:
         type: string
+      stage_id:
+        type: integer
       stage_title:
         type: string
     type: object
@@ -509,6 +520,28 @@ paths:
       summary: Resolve stage request
       tags:
       - stage-requests
+  /stage-requests/stageRequestInfo:
+    get:
+      consumes:
+      - application/json
+      description: Get information about current user's draft request
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.StageRequestInfoResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Get draft request info
+      tags:
+      - stage-requests
   /stages:
     get:
       responses:
@@ -887,7 +920,7 @@ paths:
     post:
       consumes:
       - application/json
-      description: Create a new user account
+      description: Create a new user account and automatically login
       parameters:
       - description: User registration data
         in: body
@@ -901,8 +934,7 @@ paths:
         "201":
           description: Created
           schema:
-            additionalProperties: true
-            type: object
+            $ref: '#/definitions/handler.LoginResponse'
         "400":
           description: Bad Request
           schema:
